# test_cmake_swig

./: .gitignore  README.md
cppcore/: CMakeLists.txt  setup.py
cppcore/app/: main.cpp
cppcore/modfact/: CMakeLists.txt
cppcore/modfact/src/: modfact.cpp  modfact.h
cppcore/swig/: CMakeLists.txt  modfact.i
cppcore/wheel/: setup.py
cppcore/wheel/modfact/: __init__.py
python/: main.py
